[gd_scene load_steps=6 format=3 uid="uid://cj5vyt4vlebcj"]

[ext_resource type="Script" path="res://scripts/TitleScreen.gd" id="1_50mnq"]

[sub_resource type="SystemFont" id="SystemFont_rhv14"]
font_names = PackedStringArray("Andale Mono")

[sub_resource type="Theme" id="Theme_4jap7"]
default_base_scale = 30.0
default_font = SubResource("SystemFont_rhv14")
default_font_size = 70

[sub_resource type="SystemFont" id="SystemFont_j8kmi"]
font_names = PackedStringArray("Andale Mono", "Charm")

[sub_resource type="LabelSettings" id="LabelSettings_gnf2o"]
font = SubResource("SystemFont_j8kmi")
font_size = 120
outline_size = 50
outline_color = Color(0, 0, 0, 1)

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_4jap7")
script = ExtResource("1_50mnq")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="GameTitle" type="Label" parent="CenterContainer/VBoxContainer"]
texture_filter = 1
texture_repeat = 2
layout_mode = 2
text = "SOME GAME"
label_settings = SubResource("LabelSettings_gnf2o")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "START"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "QUIT"

[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
